Home, tiktokauctionController, networkclient,sua serverlauncher, them auctionwebsocketServer, sua pom.xml